--- a/ressources/template_res.html
+++ b/ressources/template_res.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Results Report</title>
-    <link rel="icon" href="../ressources/logo_colocATool.png" type="image/png">
+    <link rel="icon" href="https://github.com/lr-can/colocalisationAnalysisTool/blob/projet/ressources/logo_colocATool.png?raw=true" type="image/png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
         body{
@@ -41,7 +41,7 @@
 <body>
     <div class="main" id="title">
         <div>
-            <img src="../ressources/logo_colocATool.png" alt="Logo" style="width: 100px;">
+            <img src="https://github.com/lr-can/colocalisationAnalysisTool/blob/projet/ressources/logo_colocATool.png?raw=true" alt="Logo" style="width: 100px;">
         </div>
         <div style="margin-left: 3rem;">
             <h1 style="margin-bottom: 0.3rem; margin-top: 0;">Colocalisation Analysis Tool</h1>
@@ -61,10 +61,10 @@
     {{results}}
     <div class="main" id="footer"> 
         <div>
-            <img src="../ressources/logo_BIOINF.png" alt="Logo bioinfo@lyon" style="height: 100px;">
+            <img src="https://github.com/lr-can/colocalisationAnalysisTool/blob/projet/ressources/logo_BIOINF.png?raw=true" alt="Logo bioinfo@lyon" style="height: 100px;">
         </div>
         <div>
-            <img src="../ressources/logo_UCBL.svg" alt="Logo UCBL" style="height: 100px;">
+            <img src="https://github.com/lr-can/colocalisationAnalysisTool/blob/projet/ressources/logo_UCBL.svg?raw=true" alt="Logo UCBL" style="height: 100px;">
         </div>
     </div>
 </body>
